--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Muli&display=wap');
+@import url("https://fonts.googleapis.com/css?family=Muli&display=wap");
 
 * {
   box-sizing: border-box;
@@ -7,7 +7,7 @@
 body {
   background-image: linear-gradient(90deg, #7d5fff, #7158);
   background-color: #f6f7fb;
-  font-family: 'Muli', sans-serif;
+  font-family: Muli, sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,7 +19,7 @@ body {
 
 .search {
   position: relative;
-   height: 50px;
+  height: 50px;
 }
 
 .search .input {
@@ -33,16 +33,16 @@ body {
 }
 
 .btn {
-   background-color: #fff;
-   border: 0;
-   cursor: pointer;
-   font-size: 24px;
-   position: absolute;
-   top: 0;
-   left: 0;
-   height: 50px;
-   width: 50px;
-   transition: transform 0.3s ease;
+  background-color: #fff;
+  border: 0;
+  cursor: pointer;
+  font-size: 24px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 50px;
+  width: 50px;
+  transition: transform 0.3s ease;
 }
 
 .btn:focus,
@@ -51,9 +51,9 @@ body {
 }
 
 .search.active .input {
-   width: 200px;
+  width: 200px;
 }
 
 .search.active .btn {
-  transform:  translateX(198px);
+  transform: translateX(198px);
 }
